clfswm (20110418.git050d0a2-1) UNRELEASED; urgency=low

  * delete the sample comment in debian/rules
  * debian/copyright
    + fix typo
    + add copyright information from files in contrib/

 --

clfswm (20110305.git58f154e-1) unstable; urgency=low

  * Initial release (Closes: #616309)

 -- Desmond O. Chang <dochang@gmail.com>  Sun, 06 Mar 2011 23:56:54 +0800