@@ -1,3 +1,4 @@
+clfswm manpage
 --- /dev/null
 +++ b/clfswm.1.txt
 @@ -0,0 +1,72 @@
